# pulsar

./: .env  .env.development  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .prettierrc.json  README.md  bun.lockb  bunfig.toml  db.tsx  index.html  index.ts  package.json  stylelintrc.json  test_setup.ts  tsconfig.json  vite.config.ts
.github/actions/setup/: action.yml
.github/workflows/: chromatic.yml  ci.yml  nightly.yml  publish.yml  updatemanifest.yml
.husky/: pre-commit
.storybook/: main.ts  preview-body.html  preview.ts
docs/: Downloads.md
model/: Post.ts  migrations.ts  schema.ts
scripts/: completion.json  copyEvolvedSeeker.sh  open-ai-test.mjs  package.json  release.cjs  release.mjs  updateManifest.cjs
scripts/sample-agent/: bundle.js  manifest.json
selenium/: package.json
selenium/test/: test.js
src/: App.tsx  DatabaseAdapter.ts  DownloadCenter.ts  adder.spec.ts  constants.ts  llamafile.ts  main.spec.ts  main.tsx  sqltest.ts  testspec.spec.ts  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/sample_models/: dummy.txt
src-tauri/src/: main.rs  transfer.rs  upload.rs
src-tauri/src/db/: decode.rs  sqlite.rs
src-tauri/src/downloads/: download_center.rs  mod.rs
src-tauri/src/file_transfer/: mod.rs  transfer.rs
src-tauri/src/fs/: file_system.rs  mod.rs
src-tauri/src/nebula/: api.rs  error.rs  mod.rs  nebula.rs
src-tauri/src/nebula/api/: tests.rs
src-tauri/src/sqlite/: mod.rs  plugin.rs  sqlite.rs
src-tauri/src/sqlite/decode/: mod.rs  sqlite.rs
src-tauri/src/system/: mod.rs
src-tauri/src/upload/: mod.rs
src-tauri/tauri-plugin-nebula/: Cargo.toml  README.md
src-tauri/tauri-plugin-nebula/.changes/: config.json  initial-release.md  readme.md
src-tauri/tauri-plugin-nebula/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/tauri-plugin-nebula/examples/vanilla/src-tauri/src/: main.rs
src-tauri/tauri-plugin-nebula/src/: error.rs  lib.rs
src-tauri/tauri-plugin-sql/: Cargo.toml
src-tauri/tauri-plugin-sql/src/decode/: sqlite.rs
src-tauri/tauri-plugin-upload/: Cargo.toml
src-tauri/tauri-plugin-upload/src/: lib.rs
src-tauri/tests/: evolvedseeker_1_3.Q2_K.gguf  smallFile.txt
src/WatermelonDB/: package.json
src/WatermelonDB/adapters/sqlite/: index.js
src/app/: App.module.scss  App.tsx  Updates.tsx
src/app/Layout/: Layout.module.scss  Layout.tsx
src/app/consts/: app.const.ts
src/app/lib/: cleanUpDB.ts  initAppFolders.ts  system.ts
src/app/managers/: user-settings.manager.ts
src/app/model/: os.model.ts
src/app/providers/: index.ts
src/app/providers/error-boundary/: index.ts
src/app/providers/theme/: index.ts
src/app/routes/: index.ts
src/app/types/: global.d.ts
src/app/user-settings/: index.ts
src/db/: adapter.ts  index.ts  migrations.ts  nativeAdapter.ts  schema.ts
src/db/agent/: agent.mock.ts  agent.model.ts  agent.repository.mock.ts  agent.repository.ts  agent.schema.ts  index.ts
src/db/chat/: chat.model.ts  chat.repository.mock.ts  chat.repository.ts  chat.schema.ts  chats.mock.ts  index.ts
src/db/document/: document.model.ts  document.repository.ts  document.schema.ts  index.ts
src/db/download/: download.mock.ts  download.model.ts  download.repository.mock.ts  download.repository.ts  download.schema.ts  index.ts
src/db/model/: index.ts  model.mock.ts  model.model.ts  model.repository.mock.ts  model.repository.ts  model.schema.ts
src/db/model-file/: index.ts  model-file.mock.ts  model-file.model.ts  model-file.repository.mock.ts  model-file.repository.ts  model-file.schema.ts
src/db/post/: index.ts  post.model.ts  post.repository.ts  post.schema.ts
src/entities/chat-message/: index.ts
src/entities/markdown/: index.ts
src/entities/markdown/consts/: codeTheme.ts
src/entities/markdown/mocks/: code-markdown.mock.ts  headings-markdown.mock.ts  links-markdown.mock.ts  ol-markdown.mock.ts  table-markdown.mock.ts  (+1 more)
src/entities/model/: index.ts
src/entities/settings/: index.ts
src/features/hugging-face-search/: CuratedHuggingFaceModels.ts  HuggingFaceSearch.ts  hugging-face-search.ts
src/features/system/: system.ts
src/features/upload-file/: index.ts
src/features/voice-input/: index.ts
src/libs/: file-system.ts  file-transfer.ts
src/pages/chat/: index.ts
src/pages/onboarding/: index.ts
src/shared/api/: api.ts
src/shared/consts/: index.ts
src/shared/lib/: Logger.ts  file-transfer.ts
src/shared/storybook/: fallbackFn.ts  index.ts
src/shared/styles/: colors.stylex.ts  fonts.scss  index.scss  mixins.scss  reset.scss  styles.css  themes.scss  typography.scss  vars.scss
src/shared/theme/: index.ts
src/shared/ui/: index.ts
src/widgets/agents/: index.ts
src/widgets/chat/: index.ts
src/widgets/downloads/: index.ts
src/widgets/model-settings/: index.ts
src/widgets/model-store/: index.ts
src/widgets/navbar/: index.ts
src/widgets/onboarding/: index.ts
src/widgets/settings/: index.ts
src/widgets/sidebar/: index.ts
src/widgets/toolbar/: index.ts
src/widgets/welcome-screen/: index.ts
storybook-static/: iframe.html  index.html  index.json  project.json
storybook-static/assets/: Button-2X9X2rJt.css  Button-CxH3AEDB.js  Button.stories-Dxutmg1Z.js  Color-RQJUDNI5-CTEcbLZn.js  ConfirmModal.stories-C0wrOBy0.js  DocsRenderer-K4EAMTCU-jHtFpQCd.js  Logo-BQcSdfXk.js  Logo-CFCAFuz2.css  Logo.stories-DIXDXNJw.js  Progress.stories-CmcjUA72.js  Select.stories-n2vRK5yT.js  Text-Ciidus3i.css  Text-Dst21N43.js  Text.stories-BFs1gQnu.js  WithTooltip-Y7J54OF7-DpV1mLmD.js  classNames-CTaYpvhF.js  compat.module-CAUz7a36.js  entry-preview-CqOfsnEZ.js  formatter-B5HCVTEV-o0tmplpS.js  iframe--uiv6MYY.js  index-CBWx_Enb.js  jsxRuntime.module-Dwme6zuK.js  preact.module-BeXc_rzl.js  preview-BNMNKH2l.js  preview-BkPRTtXJ.js  preview-CJT1csp9.js  preview-LqWO5YYC.css  syntaxhighlighter-JOJW2KGS-9K7g0hv0.js
tests/: main.test.ts
wdio/: package.json  wdio.conf.js
wdio/test/specs/: example.e2e.js
(+463 files in other folders)
