[package]
name = "pulsar"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = ["api-all", "updater", "test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = { version = "^0.4" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "colored",
] }
nebula = { git = "https://github.com/nchapman/nebula.git", default-features = false, features = [
  "llama",
] }
uuid = "1.8.0"
base64 = "0.22.0"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
read-progress-stream = "1.0.0"
once_cell = "1.19.0"
sqlx = { version = "0.7.4", features = [
  "json",
  "time",
  "sqlite",
  "runtime-tokio",
] }
futures-core = "0.3"
time = "=0.3.36"
sqlite-vss = { version = "0.1.2", features = ["download-libs"] }

[profile.dev.package.nebula]
opt-level = 3

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
