[package]
name = "tauri-plugin-sql"
version = "0.0.0"
description = "Interface with SQL databases."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = "1"
tauri-build = "1"
serde_json = "1"
thiserror = "1"
futures-core = "0.3"
sqlx = { version = "0.7.4", features = ["json", "time"] }
time = "0.3"
tokio = { version = "1", features = ["sync"] }

[features]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
