[package]
name = "tauri-plugin-sql"
version = "0.0.0"
description = "Interface with SQL databases."
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = "1"
tauri-build = "1"
serde_json = "1"
thiserror = "1"
futures-core = "0.3"
sqlx = { version = "0.7.4", features = ["json", "time"] }
time = "=0.3.36"
tokio = { version = "1", features = ["sync"] }

[features]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]
